# autonomousvehiclelab

./: .gitignore  README.md
Microcontrollers/Arduino/CombinedControlCode/: CombinedControlCode.ino
Pi/workspaces/ros2_humble_ws/install/: local_setup.sh
control_front_end/: package-lock.json
control_front_end/my-control-car/: package-lock.json  package.json
control_front_end/my-control-car/src/app/: connectPage.css  layout.tsx  page.tsx
control_front_end/my-control-car/src/app/control/: controlPage.css  page.tsx
flask_server/: 1  heartbeat.py  server.py
isaac_ros-dev/configs/camera_configs/: cameras.json
isaac_ros-dev/launch/: bringup_launch.py  demo1_launch.py  launch_motor.py  web_control__launch.py
isaac_ros-dev/log/: latest_build
isaac_ros-dev/logging/logging_data/: log_file_0.txt  log_file_1.txt  log_file_2.txt  log_file_4.txt  log_file_7.txt
isaac_ros-dev/src/: devices  record_zed_svo.py  requirements.txt  zed_svo_export.py
isaac_ros-dev/src/agv_bot_description/: CMakeLists.txt
isaac_ros-dev/src/agv_bot_description/launch/: display.launch.py
isaac_ros-dev/src/agv_bot_description/src/description/: agv_bot_description.urdf
isaac_ros-dev/src/agv_car_gazebo/: CMakeLists.txt  package.xml
isaac_ros-dev/src/agv_car_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_agv_car.launch.py
isaac_ros-dev/src/agv_car_gazebo/param/: agv_car_bridge.yaml
isaac_ros-dev/src/agv_car_gazebo/params/: agv_car_bridge.yaml  diff.drive.controller.yaml
isaac_ros-dev/src/agv_car_gazebo/urdf/: car.xacro  car1.urdf  cartest.xacro
isaac_ros-dev/src/arduino_car_hardware/: CMakeLists.txt  package.xml
isaac_ros-dev/src/arduino_car_hardware/config/: controller_manager.yaml  nav2_params.yaml
isaac_ros-dev/src/arduino_car_hardware/include/: arduino_car_hardware.h  arduino_comms.h  bicycle_controller.h
isaac_ros-dev/src/arduino_car_hardware/share/: arduino_car_hardware_plugins.xml  bicycle_controller_plugins.xml
isaac_ros-dev/src/arduino_car_hardware/src/: arduino_car_hardware.cpp  arduino_comms.cpp  bicycle_controller.cpp  robot.cpp
isaac_ros-dev/src/camera_publishers/camera_publishers/: camera_publishers.py
isaac_ros-dev/src/data_logger/: CMakeLists.txt
isaac_ros-dev/src/data_logger/src/: camera_pub.cpp  data_logger_node.cpp  data_logger_node2.cpp
isaac_ros-dev/src/data_logger_py/: package.xml  setup.cfg  setup.py
isaac_ros-dev/src/data_logger_py/data_logger_py/: data_logger_py_node.py
isaac_ros-dev/src/data_logger_py/data_logger_py/install/: local_setup.sh  setup.bash  setup.sh
isaac_ros-dev/src/data_logger_py/data_logger_py/log/: latest_build
isaac_ros-dev/src/data_logger_py/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
isaac_ros-dev/src/data_logger_py/log/: latest_build
isaac_ros-dev/src/gps_package/gps_package/: gps_node.py
isaac_ros-dev/src/image_stitcher/image_stitcher/: image_stitcher_node.py
isaac_ros-dev/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
isaac_ros-dev/src/install/data_logger/share/data_logger/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
isaac_ros-dev/src/log/: latest_build
isaac_ros-dev/src/motor_control_pkg/motor_control_pkg/: motor_control_node.py
isaac_ros-dev/src/object_avoidance/: setup.py
isaac_ros-dev/src/object_avoidance/object_avoidance/: object_avoidance_node.py
isaac_ros-dev/src/object_derek/: setup.cfg
isaac_ros-dev/src/object_derek/object_derek/: node_derek.py
isaac_ros-dev/src/teleop_twist_joy/launch/: teleop-launch.py
isaac_ros-dev/src/teleop_twist_keyboard/: teleop_twist_keyboard.py  teleop_twist_keyboard.py.save
isaac_ros-dev/src/twist_converter/: package.xml  setup.py
isaac_ros-dev/src/twist_mux/config/: twist_mux_topics.yaml
isaac_ros-dev/src/twist_mux/include/twist_mux/: topic_handle.hpp  twist_mux.hpp
isaac_ros-dev/src/twist_mux/src/: twist_mux.cpp
isaac_ros-dev/src/web_control_server/: package.xml  requirements.txt  setup.cfg  setup.py
isaac_ros-dev/src/web_control_server/web_control_server/: proxy.py  server.py  testing.py
isaac_ros-dev/src/web_video_server_python/: setup.cfg
isaac_ros-dev/src/wheeled_robot/: CMakeLists.txt  package.xml
isaac_ros-dev/src/wheeled_robot/config/: diff.drive.controller.yaml
isaac_ros-dev/src/wheeled_robot/launch/: gazebo.launch.py
isaac_ros-dev/src/wheeled_robot/src/: diff_drive_publisher.cpp
isaac_ros-dev/src/wheeled_robot/urdf/: agv_car.urdf
isaac_ros-dev/src/wheeled_robot/world/: yosemite.world
isaac_ros-dev/src/yolopv2_perception/: demo.py  run_perception.py
log/: latest_build
workspaces/Microcontrollers/Arduino/CombinedControlCode/: CombinedControlCode.ino.save
workspaces/Pi/workspaces/ros2_humble_ws/install/: setup.sh
workspaces/isaac_ros-dev/: start.sh
workspaces/isaac_ros-dev/configs/camera_configs/: cameras.json
workspaces/isaac_ros-dev/launch/: bringup_launch.py  demo1_launch.py  demo2_launch.py  launch_motor.py
workspaces/isaac_ros-dev/src/agv_bot_description/config/: ekf.yaml
workspaces/isaac_ros-dev/src/camera_pub_cpp/: CMakeLists.txt  package.xml
workspaces/isaac_ros-dev/src/camera_publishers/: camera.txt
workspaces/isaac_ros-dev/src/data_logger/: 1  CMakeLists.txt  documentation.txt  package.xml
workspaces/isaac_ros-dev/src/data_logger/install/: setup.sh  (+1 more)
workspaces/isaac_ros-dev/src/end_to_end_CNN/: package.xml  setup.cfg  setup.py
workspaces/isaac_ros-dev/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspaces/isaac_ros-dev/src/isaac_ros_common/: typescript
workspaces/isaac_ros-dev/src/log/: latest_build
workspaces/isaac_ros-dev/src/object_avoidance/: package.xml  setup.py
workspaces/isaac_ros-dev/src/object_derek/: package.xml  setup.py
workspaces/isaac_ros-dev/src/teleop_twist_keyboard/: teleop_twist_keyboard.py
workspaces/isaac_ros-dev/src/web_video_server_python/: package.xml  setup.py
workspaces/isaac_ros-dev/src/web_video_server_python/web_video_server_python/: server.py
workspaces/isaac_ros-dev/utils/: unet_test_stream.py
(+65 files in other folders)
