<?xml version="1.0"?>
<package format="3">
  <name>arduino_car_hardware</name>
  <version>0.1.0</version>
  <description>Arduino-based ROS 2 hardware interface with a bicycle controller for use with ros2_control.</description>

  <maintainer email="avishwakarma@cpp.edu">Abhishek Vishwakarma</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>

  <!-- Exec dependencies for teleop and testing -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
