<package format="2">
  <name>web_control_server</name>
  <version>0.0.0</version>
  <description>Web control server node for ROS2</description>

  <maintainer email="avishwakarma@cpp.edu">Abhishek Vishwakarma</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>flask</exec_depend>
  <exec_depend>flask-socketio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
