<?xml version="1.0"?>
<package format="3">
  <name>web_video_server_python</name>
  <version>0.0.1</version>
  <description>ROS 2 package for serving images via WebSocket and HTTP</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>websockets</exec_depend>
  <exec_depend>aiohttp</exec_depend>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Export the package -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
